--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,13 +2,10 @@
 name = "pandas-to-excel-automation"
 version = "0.1.0"
 description = "Automate inserting Pandas DataFrame into Excel template"
-authors = [{ name = "Ernesto Palacios", email = "mecatronica.mid@gmail.com" }]
+authors = [{ name = "Your Name", email = "your.email@example.com" }]
 requires-python = ">=3.10,<3.11"  # Locks to Python 3.10
+
 dependencies = [
     "pandas >= 2.0.0",
     "openpyxl >= 3.0.0",
 ]
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
